--- a/control.css
+++ b/control.css
@@ -1,6 +1,25 @@
 
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap');    
+
+.focustug-control__tabs {
+    display: grid;
+    grid-template-columns: 49% 49%;
+    justify-content: space-between;
+    padding: 20px 0;
+}
+
+
+
+.focustug-control__tabs__tab {
+    display: flex;
+    justify-content: center;
+    padding: 8px;
+    cursor: pointer;
+}
+.focustug-control__tabs > .selected_tab {
+    border-bottom: 2px solid #4ECB71;
+}
     .foctug-popup {
         position: fixed;
         bottom: 30px;
@@ -383,6 +402,74 @@
     }
 
 
+
+
+
+
+    .focustug-control__leaderboard  {
+        padding: 24px 0;
+    }
+
+    .focustug-control__leaderboard  p {
+        color: rgb(209, 209, 209);
+    }
+
+    .focustug-control__leaderboard > table {
+        width: 100%;
+	border-collapse: collapse; 
+	margin:8px auto;
+    border-radius: 15px;
+    }
+
+    .focustug-control__leaderboard > th {
+	background: #3498db; 
+	color: white; 
+	font-weight: bold; 
+	
+    }
+
+    .focustug-control__leaderboard  tr {
+        background: rgba(255, 255, 255, 0.10);
+        padding: 8px !important;
+        color: white;
+	
+	
+    }
+
+    td {
+        padding: 8px;
+        color: white;
+        font-size: 14px;
+        color: rgb(234, 234, 234);
+
+    }
+
+    .table-header {
+        padding: 8px !important;
+
+    }
+
+    .table-header > td {
+        
+        background-color: rgba(128, 128, 128, 0.255);
+    }
+
+    td > button {
+        background-color: transparent;
+        border: 0.5px grey solid;
+        color: white;
+        border-radius: 10px;
+        
+    }
+
+    .focustug-control__leaderboard  tr {
+	padding: 10px; 
+    background: rgba(255, 255, 255, 0.10);
+	text-align: left; 
+	font-size: 16px;
+    color: grey;
+	
+    }
 .lds-container {
     width: 100%;
     height: 300px;
